--- a/card.html
+++ b/card.html
@@ -200,4 +200,5 @@
     <script src="assets/bar.js"></script>
     <script src="assets/card.js?v=1.0"></script>
     <script src="assets/manifest.js"></script>
+<script src="assets/nav.js"></script>
 </body>
