--- a/home.html
+++ b/home.html
@@ -70,7 +70,8 @@ document.querySelectorAll('.bottom_element_grid').forEach(el => {
   });
 });
 </script>
-
+<script src="assets/nav.js"></script>
 </body>
+
 
 
