--- a/id.html
+++ b/id.html
@@ -40,4 +40,5 @@
     </div>
     <script src="assets/id.js?v=1.1"></script>
     <script src="assets/manifest.js"></script>
+<script src="assets/nav.js"></script>
 </body>
