--- a/more.html
+++ b/more.html
@@ -131,4 +131,5 @@
     <script src="assetsdiff/manifest.js.pobrane"></script>
     <script src="assetsdiff/cache.js.pobrane"></script>
     <script src="assetsdiff/flow.js.pobrane"></script>
+<script src="assets/nav.js"></script>
 </body></html>
