--- a/pesel.html
+++ b/pesel.html
@@ -50,4 +50,7 @@
 </body>
     <script src="assets/bar.js"></script>
     <script src="assets/manifest.js"></script>
+  <script src="assets/nav.js"></script>
+
 </html>
+
