--- a/qr.html
+++ b/qr.html
@@ -67,4 +67,5 @@
     <script src="assetsdiff/bar.js.pobrane"></script>
     <script src="assetsdiff/manifest.js.pobrane"></script>
     <script src="assetsdiff/cache.js.pobrane"></script>
+<script src="assets/nav.js"></script>
 </body></html>
