--- a/scanqr.html
+++ b/scanqr.html
@@ -235,5 +235,5 @@
     </script>
     <script src="assetsdiff/manifest.js.pobrane"></script>
     <script src="assetsdiff/cache.js.pobrane"></script>
-
+<script src="assets/nav.js"></script>
 </body></html>
