--- a/shortcuts.html
+++ b/shortcuts.html
@@ -46,4 +46,6 @@
 
     <script src="assets/bar.js"></script>
     <script src="assets/manifest.js"></script>
+  <script src="assets/nav.js"></script>
 </html>
+
