--- a/showqr.html
+++ b/showqr.html
@@ -70,4 +70,5 @@
     <script src="./showqr_files/show.js"></script>
     <script src="assetsdiff/manifest.js.pobrane"></script>
     <script src="./showqr_files/cache.js.pobrane"></script>
+<script src="assets/nav.js"></script>
 </body></html>
